[gd_scene load_steps=5 format=2]

[ext_resource path="res://warp.png" type="Texture" id=1]
[ext_resource path="res://Turret.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.9676

[sub_resource type="CircleShape2D" id=2]
radius = 139.071

[node name="Turret" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="reload_timer" type="Timer" parent="."]
autostart = true

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource( 2 )
[connection signal="timeout" from="reload_timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
